@@ -613,3 +613,4 @@
     v.5.7.1 (2022.XX.YY)
         バージョン情報ダイアログを改良。
         コントロールの表示が悪いので、ちらつきのある方法に戻る。
+        メインウィンドウのフォーカスを記憶。
