@@ -270,4 +270,5 @@
     - 리소스 ID 관리에서 수정된 재컴파일입니다.
 - v.5.7.1 (2022.XX.YY)
     - 버전 정보 대화상자가 개선되었습니다.
-    - Back to a flickering method due to wrong control display.
+    - Backed to a flickering method due to wrong control display.
+    - Remembered main window focus.
